--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ permalink: /
     <div class="row">
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
-          <h1 class="animated fadeInUp">Dr Sim&atilde;o Marques &#38; <br> DESIGN AGENCY</h1>
-          <p class="animated fadeInUp">We love the Web and the work we do. We work closely with our clients to deliver the best possible solutions for their needs</p>
+          <h1 class="animated fadeInUp">Dr Sim&atilde;o Marques; <br> Welcome</h1>
+          <p class="animated fadeInUp">I am a Senior Lecturer at the University of Surrey in the Mechanicak Engineering Sciences Department.</p>
         </div>
       </div>
     </div>
