--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@ permalink: /
     <div class="row">
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
-          <h1 class="animated fadeInUp">I am Sim&atilde;o Marques,<br> I am an aerospace engineer and Senior Lecturer at the University of Surrey</h1>
-          <p class="animated fadeInUp"> I am interested in computational methods for aerodynamic and aeroelastic analysis and design.
-My work focuses on developing advanced high-fidelity methods for the analysis and design of aerospace vehicles. To reach this objective, we are currently developing algorithms and numerical methods on the following topics:<br>
-CFD methods for novel hardware architectures<br>
-High-Fidelity Aeroelastic Analysis<br>
-Multidisciplinary Optimization algorithms<br>
-Uncertainty Quantification</p>
+          <h1 class="animated fadeInUp">I am Sim&atilde;o Marques,<br> I am an aerospace engineer and 
+            Senior Lecturer at the University of Surrey</h1>
+          <p class="animated fadeInUp"> I am interested in computational methods for aerodynamic and 
+            aeroelastic analysis and design. My work focuses on developing advanced high-fidelity methods 
+            for the analysis and design of aerospace vehicles. To reach this objective, we are currently 
+            developing algorithms and numerical methods on the following topics:<br>
+            CFD methods for novel hardware architectures<br>
+            High-Fidelity Aeroelastic Analysis<br>
+            Multidisciplinary Optimization algorithms<br>
+            Uncertainty Quantification</p>
         </div>
       </div>
     </div>
