--- a/papers.html
+++ b/papers.html
@@ -11,7 +11,7 @@ permalink: /papers/
             <div class="col-md-12">
                 <div class="block">
                     <h1>Publications.</h1>
-                    <p>Check out my publications and those of my students.</p>
+                    <p>Check out my publications and my students' reports.</p>
                 </div>
             </div>
         </div>
