--- a/papers.html
+++ b/papers.html
@@ -166,6 +166,32 @@ permalink: /papers/
   </div>
 </section>
 
+<section id="Publications">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                  ---
+                  title: "Paper Title Number 1"
+                  collection: publications
+                  permalink: /papers/easn_ahb_lco
+                  excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
+                  date: 2009-10-01
+                  venue: 'Journal 1'
+                  paperurl: 'https://simaomrq.github.io/papers/easn_ahb_lco.pdf'
+                  citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).'
+                  ---
+                  This paper is about the number 1. The number 2 is left for future work.
+
+                  [Download paper here](http://academicpages.github.io/files/paper1.pdf)
+
+                  Recommended citation: Your Name, You. (2009). "Paper Title Number 1." <i>Journal 1</i>. 1(1).
+              </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <!-- Call to action Start -->
 <section id="call-to-action">
