--- a/papers.html
+++ b/papers.html
@@ -1,21 +1,256 @@
 ---
-layout: default
+layout: page
 title: Publications
-permalink: papers.html
+permalink: /papers/
 ---
-## Submitted & Under review
 
-{% bibliography --template bibtemplate --style _bibliography/cocolab.csl --query @*[year=Manuscript] %}
+    <!-- Slider Start -->
+<section id="global-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                    <h1>Publications.</h1>
+                    <p>Check out my publications and some of my students' reports.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+    <!-- Portfolio Start -->
+<section id="portfolio-work">
+    <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="block">
+              <div class="portfolio-menu">
+                <ul>
+                    <li class="filter" data-filter="all">Everything</li>
+                    <li class="filter" data-filter=".Branding">Branding</li>
+                    <li class="filter" data-filter=".Websites">Websites</li>
+                    <li class="filter" data-filter=".Graphic">Graphic</li>
+                    <li class="filter" data-filter=".design">design</li>
+                    <li class="filter" data-filter=".Video">Video</li>
+                </ul>
+              </div>
+              <div class="portfolio-contant">
+                <ul id="portfolio-contant-active">
+                    <li class="mix Branding">
+                      <a href="#">
+                        <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
+                        <div class="overly">
+                          <div class="position-center">
+                            <h2>Tesla Motors</h2>
+                            <p>Labore et dolore magna aliqua. Ut enim ad </p>
 
-## To appear
+                          </div>
+                        </div>
+                      </a>
+                  </li>
+                  <li class="mix Websites">
+                    <a href="#">
+                      <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>Tesla Motors</h2>
+                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
 
-{% bibliography --template bibtemplate --style _bibliography/cocolab.csl --query @*[year=To appear] %}
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="mix Graphic">
+                    <a href="#">
+                      <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>Tesla Motors</h2>
+                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
 
-{% for year in (2006..{{site.max_year}}) reversed %}
+                        </div>
+                      </div>
 
-<a class="subtle_link" name="{{year}}"></a>
-## {{year}}
+                    </a>
+                  </li>
+                  <li class="mix design">
+                    <a href="#">
+                      <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>Tesla Motors</h2>
+                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
 
-{% bibliography --template bibtemplate --style _bibliography/cocolab.csl --query @*[year={{year}}] %}
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="mix Video">
+                    <a href="#">
+                      <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>Tesla Motors</h2>
+                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
 
-{% endfor %}
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="mix Graphic">
+                    <a href="#">
+                      <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>Tesla Motors</h2>
+                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+</section>
+
+<!-- Clients Logo Section Start -->
+<section id="clients-logo-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="block">
+          <div id="clients-logo" class="owl-carousel">
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="Publications">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                  ---
+                  title: "Paper Title Number 1"
+                  collection: publications
+                  permalink: /papers/easn_ahb_lco
+                  excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
+                  date: 2009-10-01
+                  venue: 'Journal 1'
+                  paperurl: 'https://simaomrq.github.io/papers/easn_ahb_lco.pdf'
+                  citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).'
+                  ---
+                  This paper is about the number 1. The number 2 is left for future work.
+
+                  [Download paper here](http://academicpages.github.io/files/paper1.pdf)
+
+                  Recommended citation: Your Name, You. (2009). "Paper Title Number 1." <i>Journal 1</i>. 1(1).
+              </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- Call to action Start -->
+<section id="call-to-action">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="block">
+          <h2>We design delightful digital experiences.</h2>
+          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
+          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section id="Publications">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="block">
+          <h2>We design delightful digital experiences.</h2>
+          <div class="list__item">
+            <p>
+                Published in <i>Journal 1</i>, 2015
+            </p>
+          <p class="archive__item-excerpt" itemprop="description">
+            <p>
+              This paper is about the number 3. The number 4 is left for future work.
+            </p>
+          </p>
+          <p>
+            Recommended citation: Your Name, You. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3). 
+            <a href="http://academicpages.github.io/files/paper3.pdf">
+              <u>http://academicpages.github.io/files/paper3.pdf</u>
+            </a>
+          </p>
+          </article>
+          </div>
+          <div class="list__item">
+          <article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork"><h2 class="archive__item-title" itemprop="headline"> <a href="https://academicpages.github.io/publication/2010-10-01-paper-title-number-2" rel="permalink">Paper Title Number 2 </a></h2><p>Published in <i>Journal 1</i>, 2010</p><p class="archive__item-excerpt" itemprop="description"><p>This paper is about the number 2. The number 3 is left for future work.</p></p><p>Recommended citation: Your Name, You. (2010). &quot;Paper Title Number 2.&quot; <i>Journal 1</i>. 1(2). <a href="http://academicpages.github.io/files/paper2.pdf"><u>http://academicpages.github.io/files/paper2.pdf</u></a></p></article></div><div class="list__item"><article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork"><h2 class="archive__item-title" itemprop="headline"> <a href="https://academicpages.github.io/publication/2009-10-01-paper-title-number-1" rel="permalink">Paper Title Number 1 </a></h2>
+				<p>
+					Published in <i>Journal 1</i>, 2009
+				</p>
+				<p class="archive__item-excerpt" itemprop="description">
+					<p>
+					This paper is about the number 1. The number 2 is left for future work.
+					</p>
+				</p>
+				<p>Recommended citation: Your Name, You. (2009). &quot;Paper Title Number 1.&quot; 		
+					<i>
+						Journal 1
+					</i>. 1(1). 
+					<a href="http://academicpages.github.io/files/paper1.pdf"><u>http://academicpages.github.io/files/paper1.pdf</u>
+					</a>
+				</p>
+			</article>
+		</div>
+	</div>
+</div>
+</section>
