--- a/papers.html
+++ b/papers.html
@@ -191,15 +191,15 @@ permalink: /papers/
           <div class="list__item">
 	  	<article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
 		  <h2 class="archive__item-title" itemprop="headline"> 
-			  <a href="https://academicpages.github.io/publication/2010-10-01-paper-title-number-2" 
-			     rel="permalink">Paper Title Number 2 </a>
+			  <a href="https://www.sciencedirect.com/science/article/pii/S1876610219302267" 
+			     rel="permalink">Investigation of competitive tar reforming using activated char as catalyst </a>
 		  </h2>
 		  <p>
-			  Published in <i>Journal 1</i>, 2010
+			  Published in <i>Energy Procedia 1</i>, 2019
 		  </p>
 		  <p class="archive__item-excerpt" itemprop="description">
 		  	<p>
-			  This paper is about the number 2. The number 3 is left for future work.
+			  Investigation of competitive tar reforming using activated char as catalyst
 		  	</p>
 		  </p>
 		  <p>Recommended citation: Your Name, You. (2010). &quot;Paper Title Number 2.&quot; 
