--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ permalink: /
       <div class="col-md-7 col-sm-12">
         <div class="block">
           <div class="section-title">
-            <h2>About Us</h2>
+            <h2>About Us35</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
           </div>
           <p>first paragraph </p>
@@ -51,7 +51,7 @@ permalink: /
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-6">
-      <h2>WE BELIEVE IN GREAT IDEAS</h2>
+      <h2>WE BELIEVE IN GREAT IDEAS index54</h2>
       <p>second paragraph.</p>
       <p>third paragraph.</p>
       <p>fourth paragraph.</p>
@@ -66,7 +66,7 @@ permalink: /
   <div class="container">
     <div class="row">
       <div class="section-title">
-        <h2>Our Services</h2>
+        <h2>Our Services index69</h2>
         <p>fifth paragraph</p>
       </div>
     </div>
@@ -136,7 +136,7 @@ permalink: /
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>We design delightful digital experiences.</h2>
+          <h2>index139.</h2>
           <p>thirteenth paragraph .</p>
           <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
         </div>
@@ -149,7 +149,7 @@ permalink: /
   <div class="container">
     <div class="row">
       <div class="section-title text-center">
-        <h2>Fun Facts About Us</h2>
+        <h2>Fun Facts About Usindex152</h2>
         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
       </div>
     </div>
