--- a/work.html
+++ b/work.html
@@ -25,12 +25,12 @@ permalink: /work/
             <div class="block">
               <div class="portfolio-menu">
                 <ul>
-                    <li class="filter" data-filter="all">Everything</li>
-                    <li class="filter" data-filter=".Branding">Branding</li>
-                    <li class="filter" data-filter=".Websites">Websites</li>
-                    <li class="filter" data-filter=".Graphic">Graphic</li>
-                    <li class="filter" data-filter=".design">design</li>
-                    <li class="filter" data-filter=".Video">Video</li>
+                    <li class="filter" data-filter="all">work28</li>
+                    <li class="filter" data-filter=".Branding">work29</li>
+                    <li class="filter" data-filter=".Websites">work30</li>
+                    <li class="filter" data-filter=".Graphic">work31</li>
+                    <li class="filter" data-filter=".design">work32</li>
+                    <li class="filter" data-filter=".Video">work33</li>
                 </ul>
               </div>
               <div class="portfolio-contant">
@@ -40,7 +40,7 @@ permalink: /work/
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
                           <div class="position-center">
-                            <h2>Tesla Motors</h2>
+                            <h2>work43</h2>
                             <p>Labore et dolore magna aliqua. Ut enim ad </p>
 
                           </div>
@@ -52,7 +52,7 @@ permalink: /work/
                       <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
+                          <h2>work55</h2>
                           <p>Labore et dolore magna aliqua. Ut enim ad </p>
 
                         </div>
@@ -64,7 +64,7 @@ permalink: /work/
                       <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
+                          <h2>work67</h2>
                           <p>Labore et dolore magna aliqua. Ut enim ad </p>
 
                         </div>
@@ -77,7 +77,7 @@ permalink: /work/
                       <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
+                          <h2>work80</h2>
                           <p>Labore et dolore magna aliqua. Ut enim ad </p>
 
                         </div>
@@ -89,7 +89,7 @@ permalink: /work/
                       <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
+                          <h2>work92</h2>
                           <p>Labore et dolore magna aliqua. Ut enim ad </p>
 
                         </div>
@@ -101,7 +101,7 @@ permalink: /work/
                       <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
+                          <h2>work104</h2>
                           <p>Labore et dolore magna aliqua. Ut enim ad </p>
 
                         </div>
@@ -173,7 +173,7 @@ permalink: /work/
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>We design delightful digital experiences.</h2>
+          <h2>work177.</h2>
           <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
           <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
         </div>
