--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ permalink: /
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-6">
-      <h2>WE BELIEVE IN GREAT IDEAS index54</h2>
+      <h2>index54</h2>
       <p>second paragraph.</p>
       <p>third paragraph.</p>
       <p>fourth paragraph.</p>
