--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ permalink: /
       </div><!-- .col-md-7 close -->
       <div class="col-md-5 col-sm-12">
         <div class="block">
-          <img src="img/wrapper-img.png" alt="Img">
+          <img src="img/nhlpL2t5.png" alt="Img">
         </div>
       </div><!-- .col-md-5 close -->
     </div>
