--- a/papers.html
+++ b/papers.html
@@ -11,7 +11,7 @@ permalink: /papers/
             <div class="col-md-12">
                 <div class="block">
                     <h1>Publications.</h1>
-                    <p>Check out my publications and some of my students' reports. papers13</p>
+                    <p>Check out my publications and some of my students' reports.</p>
                 </div>
             </div>
         </div>
@@ -252,6 +252,7 @@ permalink: /papers/
 		</p>
 		</article>
 	</div>
+	<h2>Thesis</h2>
       </div>
     </div>
   </div>
