--- a/papers.html
+++ b/papers.html
@@ -253,6 +253,43 @@ permalink: /papers/
 		</article>
 	</div>
 	<h2>Thesis</h2>
+	<div class="list__item">
+	  	<article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
+		  <h2 class="archive__item-title" itemprop="headline"> 
+			  <a href="https://www.qub.ac.uk/research-centres/media/Media,459296,en.pdf" 
+			     rel="permalink">High-Speed Aerodynamics</a>
+		  </h2>
+		  <p> Stephen Hegarty, MEng Dissertation, Queen's University Belfast, Belfast, U.K., 2011</p>
+		  <p class="archive__item-excerpt" itemprop="description">
+	          	<p>PMB Validation for Missile Bodies in High Speed Flows Incorporating UncertaintyQuantification.</p>
+		  </p>
+		</article>
+	</div>
+	<div class="list__item">
+	  	<article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
+		  <h2 class="archive__item-title" itemprop="headline"> 
+			  <a href="https://www.qub.ac.uk/research-centres/media/Media,459298,en.pdf" 
+			     rel="permalink">Optimisation and development of an eddy-viscosity turbulence 
+				  model for a GPU Enabled, Compressible Flow Solver</a>
+		  </h2>
+		  <p> Jean-François Wald, M.Sc. Thesis, Queen's University Belfast / ISAE-ENSMA, Belfast, U.K., 2012</p>
+		  <p class="archive__item-excerpt" itemprop="description">
+	          	<p>Development of an unstructured RANS compressible solver gor GPUs</p>
+		  </p>
+		</article>
+	</div>
+	<div class="list__item">
+	  	<article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
+		  <h2 class="archive__item-title" itemprop="headline"> 
+			  <a href="https://www.qub.ac.uk/research-centres/media/Media,423609,en.pdf" 
+			     rel="permalink">Extending SU2 to Aeroelastic Simulations using MpCCI</a>
+		  </h2>
+		  <p> Manuel Cellarius, M.Sc. Thesis, Queen's University Belfast / RWTH Aachen University, Belfast, U.K., 2013</p>
+		  <p class="archive__item-excerpt" itemprop="description">
+	          	<p>Development of an unstructured RANS compressible solver gor GPUs</p>
+		  </p>
+		</article>
+	</div>
       </div>
     </div>
   </div>
