--- a/papers.html
+++ b/papers.html
@@ -172,9 +172,10 @@ permalink: /papers/
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>We design delightful digital experiences.</h2>
+          <h2></h2>
           <p>papers176.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+          <a class="btn btn-default btn-call-to-action" href="https://scholar.google.co.uk/citations?user=2v-5Zk4AAAAJ&hl=en&oi=sra
+							      " >Google Scholar List of Publications</a>
         </div>
       </div>
     </div>
@@ -187,7 +188,7 @@ permalink: /papers/
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>Journal Articles</h2>
+          <h2>Selected Journal Articles</h2>
           <div class="list__item">
 	  	<article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
 		  <h2 class="archive__item-title" itemprop="headline"> 
@@ -214,22 +215,35 @@ permalink: /papers/
 		<article class="archive__item" itemscope="" 
 					       itemtype="http://schema.org/CreativeWork">
 		<h2 class="archive__item-title" itemprop="headline"> 
-		      <a href="https://academicpages.github.io/publication/2009-10-01-paper-title-number-1" 
-			 rel="permalink">Paper Title Number 1 
+		      <a href="https://www.sciencedirect.com/science/article/pii/S0045794917313202" 
+			 rel="permalink">A harmonic balance method for nonlinear fluid structure interaction problems 
 		      </a>
 		</h2>
           	<p>
-                	Published in <i>Journal 1</i>, 2015
+                	Published in <i>
+Computers & Structures, 2018</i>, 2015
           	</p>
           	<p class="archive__item-excerpt" itemprop="description">
           		<p>
-          			This paper is about the number 3. The number 4 is left for future work.
+          			Over the past decade the Harmonic-Balance technique has been 
+				established as a viable alternative to direct time integration 
+				methods to predict periodic aeroelastic instabilities. This 
+				article reports the progress made in using a frequency updating 
+				procedure, based on a coupled fluid-structural solver using the 
+				Harmonic-Balance formulation. In particular, this paper presents 
+				an efficient implicit time-integrator that accelerates the 
+				convergence of the structural equations of motion to the final 
+				solution. To demonstrate the proposed approached, the paper 
+				includes a detailed investigation of the impact of input 
+				parameters and exercises the method for two types of fluid-structural 
+				nonlinear instabilities: transonic limit-cycle oscillations and vortex-induced vibrations.
           		</p>
           	</p>
           	<p>
-          		Recommended citation: Your Name, You. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3). 
-            		<a href="http://academicpages.github.io/files/paper3.pdf">
-              			<u>http://academicpages.github.io/files/paper3.pdf</u>
+          		Recommended citation: W. Yao, S. Marques (2018). &quot;Paper Title Number 3.&quot; 
+			<i>Computers & Structures</i>. 201. 
+            		<a href="https://www.sciencedirect.com/science/article/pii/S0045794917313202">
+              			<u>open access</u>
             		</a>
           	</p>
           	</article>
