--- a/papers.html
+++ b/papers.html
@@ -220,8 +220,7 @@ permalink: /papers/
 		      </a>
 		</h2>
           	<p>
-                	Published in <i>
-Computers & Structures, 2018</i>, 2015
+			Published in <i>Computers & Structures</i>
           	</p>
           	<p class="archive__item-excerpt" itemprop="description">
           		<p>
@@ -240,32 +239,76 @@ Computers & Structures, 2018</i>, 2015
           		</p>
           	</p>
           	<p>
-          		Recommended citation: W. Yao, S. Marques (2018). &quot;Paper Title Number 3.&quot; 
-			<i>Computers & Structures</i>. 201. 
+          		Recommended citation: Yao, W. and Marques, S., 2018. 
+			&quot; A harmonic balance method for nonlinear fluid structure interaction problems. &quot; 
+			<i>Computers & Structures</i>.  201, pp.26-36.
             		<a href="https://www.sciencedirect.com/science/article/pii/S0045794917313202">
-              			<u>open access</u>
+              		<u>open access version</u>
             		</a>
           	</p>
           	</article>
           </div>
           <div class="list__item">
-          	<article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork"><h2 class="archive__item-title" itemprop="headline"> <a href="https://academicpages.github.io/publication/2010-10-01-paper-title-number-2" rel="permalink">Paper Title Number 2 </a></h2><p>Published in <i>Journal 1</i>, 2010</p><p class="archive__item-excerpt" itemprop="description"><p>This paper is about the number 2. The number 3 is left for future work.</p></p><p>Recommended citation: Your Name, You. (2010). &quot;Paper Title Number 2.&quot; <i>Journal 1</i>. 1(2). <a href="http://academicpages.github.io/files/paper2.pdf"><u>http://academicpages.github.io/files/paper2.pdf</u></a></p></article></div><div class="list__item"><article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork"><h2 class="archive__item-title" itemprop="headline"> <a href="https://academicpages.github.io/publication/2009-10-01-paper-title-number-1" rel="permalink">Paper Title Number 1 </a></h2>
-		<p>
-			Published in <i>Journal 10</i>, 2009
-		</p>
-		<p class="archive__item-excerpt" itemprop="description">
-			<p>
-				This paper is about the number 1. The number 2 is left for future work.
-			</p>
-		</p>
-		<p>Recommended citation: Your Name, You. (2009). &quot;Paper Title Number 1.&quot; 		
-			<i>Journal 1</i>. 1(1).
-			<a href="http://academicpages.github.io/files/paper1.pdf">
-				<u>http://academicpages.github.io/files/paper1.pdf</u>
-			</a>
-		</p>
-		</article>
-	</div>
+          	<article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
+		  <h2 class="archive__item-title" itemprop="headline"> 
+			  <a href="https://arc.aiaa.org/doi/abs/10.2514/1.J055143" 
+			     rel="permalink">Nonlinear aerodynamic and aeroelastic model reduction using 
+				  a discrete empirical interpolation method </a>
+		  </h2>
+		  <p>
+			  Published in <i>AIAA Journal</i>, 2017
+		  </p>
+		  <p class="archive__item-excerpt" itemprop="description">
+		  	<p>
+			  Investigation of competitive tar reforming using activated char as catalyst
+		  	</p>
+		  </p>
+		  <p>Recommended citation: Yao, W. and Marques, S., (2017). &quot;Nonlinear aerodynamic 
+	  and aeroelastic model reduction using a discrete empirical interpolation method.&quot; 
+			  <i>JAIAA Journal</i>. 55(2), pp.624-637.
+			  <a href="https://doi.org/10.2514/1.J055143">
+				  <u>https://doi.org/10.2514/1.J055143</u>
+			  </a>
+		  </p>
+		  </article>
+	 </div>
+	  <div class="list__item">
+          	<article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
+		  <h2 class="archive__item-title" itemprop="headline"> 
+			  <a href="https://pure.qub.ac.uk/portal/files/130074197/AeroJ_2015_4701_R1.pdf" 
+			     rel="permalink">Reducing parametric uncertainty in limit-cycle 
+				  oscillation computational models </a>
+		  </h2>
+		  <p>
+			  Published in <i>The Aeronautical Journal</i>, 2017
+		  </p>
+		  <p class="archive__item-excerpt" itemprop="description">
+		  	<p>
+			  The assimilation of discrete data points with model predictions can 
+				be used to achieve a re-duction in the uncertainty of the model 
+				input parameters which generate accurate predictions.The problem 
+				investigated here involves the prediction of limit-cycle oscillations 
+				using a High-Dimensional  Harmonic  Balance  method  (HDHB). The  
+				efficiency  of  the  HDHB  method  isexploited to enable calibration 
+				of structural input parameters using a Bayesian inference tech-nique. 
+				Markov-chain Monte Carlo is employed to sample the posterior 
+				distributions. Parameter estimation is carried out on a 
+				pitch/plunge aerofoil and two Goland wing configurations. In all 
+				cases significant refinement was achieved in the distribution of 
+				possible structural parame-ters allowing better predictions of their 
+				true deterministic values. Additionally, a comparisonof two approaches 
+				to extract the true values from the posterior distributions is presented.
+		  	</p>
+		  </p>
+		  <p>Recommended citation: Hayes, R., Dwight, R. and Marques, S., (2017). &quot;Reducing parametric 
+	  uncertainty in limit-cycle oscillation computational models.&quot; 
+			  <i>The Aeronautical Journal</i>. 121(1241), pp.940-969.
+			  <a href="https://doi.org/10.1017/aer.2017.37">
+				  <u>https://doi.org/10.1017/aer.2017.37</u>
+			  </a>
+		  </p>
+		  </article>
+	 </div>
 	<h2>Thesis</h2>
 	<div class="list__item">
 	  	<article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
