--- a/papers.html
+++ b/papers.html
@@ -275,7 +275,7 @@ permalink: /papers/
 	  <div class="list__item">
           	<article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
 		  <h2 class="archive__item-title" itemprop="headline"> 
-			  <a href="https://pure.qub.ac.uk/portal/files/130074197/AeroJ_2015_4701_R1.pdf" 
+			  <a href="https://core.ac.uk/download/pdf/96660012.pdf" 
 			     rel="permalink">Reducing parametric uncertainty in limit-cycle 
 				  oscillation computational models </a>
 		  </h2>
