--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@ permalink: /
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="icon ion-coffee"></i>
-          <h4>Branding</h4>
+          <h4>Aeroelastics</h4>
           <p>sixth paragraph </p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-compass"></i>
-          <h4>Web Design</h4>
+          <h4>MDO</h4>
           <p>sixth paragraph </p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-image"></i>
-          <h4>App Design</h4>
+          <h4>UQ</h4>
           <p>seventh paragraph  </p>
         </div>
       </div>
